Keep Shizuku UserService Java 8 compatible